--- a/app/src/main/res/values-nl-rBE/strings.xml
+++ b/app/src/main/res/values-nl-rBE/strings.xml
@@ -3,6 +3,7 @@
     <!-- Dutch text for the program -->
     <string name="app_name">Streepjes App</string>
     <string name="confirm">Bevestigen</string>
+    <string name="edit_mode">Bewerkings stand</string>
 
     <!-- check_balance -->
     <string name="balance_title">Onkosten</string>
@@ -26,10 +27,23 @@
     <string name="name_uppercase">De naam moet starten met een hoofdletter!</string>
     <string name="pincode_length">De pincode moet tussen de 2 en 6 cijfers zijn!</string>
     <string name="invalid_number">Dit is geen correcte pincode!</string>
+    <string name="user_exists">Deze gebruiker bestaat al!</string>
+
+    <!-- edit_menu -->
+    <string name="edit_menu_header">Bewerkings menu</string>
+    <string name="edit_balance">Bewerk onkosten</string>
+    <string name="change_balance">Aantal</string>
+    <string name="edit_pincode">Bewerk pincode</string>
+    <string name="edit_group">Bewerk groep</string>
+    <string name="delete_user">Verwijder gebruiker</string>
+    <string name="delete_user_text1">Weet je zeker dat je</string>
+    <string name="delete_user_text2">wilt verwijderen?</string>
+    <string name="edit_rank">Bewerk rank</string>
 
     <!-- log -->
     <string name="addition">toegevoegd aan</string>
     <string name="creation">registreerde</string>
+    <string name="deletion">verwijderd van</string>
     <string name="error">Iets liep mis!</string>
 
     <!-- main_screen -->
@@ -47,6 +61,7 @@
     <string name="change_pincode">Verander pincode</string>
     <!-- mod_options -->
     <string name="create_user">Registreer gebruiker</string>
+    <string name="edit_user">Gebruiker aanpassen</string>
     <!-- admin_options -->
     <string name="empty_database">Database leegmaken</string>
     <string name="setup_database">Database starten</string>
