Adds timestamps and cancel button
Adds timestamps and cancel button

--- a/app/src/main/res/values-nl-rBE/strings.xml
+++ b/app/src/main/res/values-nl-rBE/strings.xml
@@ -11,6 +11,7 @@
 
     <!-- confirm_changes -->
     <string name="changes_title">Streepjes</string>
+    <string name="cancel">Annuleren</string>
 
     <!-- create_user -->
     <string name="create_user_header">Registreer gebruiker</string>
@@ -66,6 +67,7 @@
     <!-- admin_options -->
     <string name="admin_options_header">Admin opties</string>
     <string name="get_balances">Alle onkosten</string>
+    <string name="total">Totaal</string>
     <string name="reset_balances">Onkosten resetten</string>
     <string name="print_database">Print Database</string>
     <string name="empty_database">Database leegmaken</string>
